Replacing Resilience4J in favor of Spring cloud Circuit breaker